fix(FF-00): fix switch icons wrong position when placing into big container

--- a/packages/toggles/src/components/Switch/styles.module.scss
+++ b/packages/toggles/src/components/Switch/styles.module.scss
@@ -5,6 +5,8 @@ $switchAnimationDuration: 0.1s;
 
 .container {
   @include styles.container('switch');
+
+  position: relative;
 }
 
 .box {
